--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpk+596qrRUKXAJZZC7fOE"
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,12 +17,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SirCouqounFace/AFP2021_1_K0800_csapat3_big/blob/NeuralNetwork/code/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XGuOxqsDdzyf"
       },
       "source": [
-        ""
+        "import numpy as np  \n",
+        "import pandas as pd \n",
+        "import matplotlib.pyplot as plt  "
       ],
       "execution_count": null,
       "outputs": []
