Imported data_Eger.csv

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -38,6 +38,21 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ndULgkcvfqYL"
+      },
+      "source": [
+        "url = \"https://raw.githubusercontent.com/SirCouqounFace/AFP2021_1_K0800_csapat3_big/nn/history_data.csv\"\n",
+        "dataset =pd.read_csv(url,encoding= 'unicode_escape')\n",
+        "dataset = dataset.fillna(0)\n",
+        "temp=dataset['Minimum Temperature']\n",
+        "precipitation=dataset['Precipitation']"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
