Checking dataset's first 10 item

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -53,6 +53,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aXlLfqp0f2m_"
+      },
+      "source": [
+        "dataset.head(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
