Reshapeing the array

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -64,6 +64,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8ZY5S6btgXmZ"
+      },
+      "source": [
+        "x = np.array(temp).reshape(-1, 1)\n",
+        "y = np.array(precipitation)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
