--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -76,6 +76,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5OyMwI4BgyH-"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split \n",
+        "xtrain, xtest, ytrain, ytest = train_test_split( x, y, test_size=1/3, random_state=0 )"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
