Fitting simple linear regression to the Training Set

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -88,6 +88,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7FzoU0ubhRLp"
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression \n",
+        "regressor = LinearRegression()\n",
+        "regressor.fit( xtrain, ytrain )"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
