--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -101,6 +101,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KVWtlJClh8qv"
+      },
+      "source": [
+        "regressor.coef_ , regressor.intercept_"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
