Made value files

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -112,6 +112,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9E_z1x2-il58"
+      },
+      "source": [
+        "actualValue = ytrain\n",
+        "predictedValue = regressor.predict(xtrain) \n",
+        "xtrain[0], actualValue[0] , predictedValue[0]"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
