Changed regressor to y = mx + c

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -125,6 +125,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-gIFDclrjvex"
+      },
+      "source": [
+        "regressor.coef_ * xtrain[0] + regressor.intercept_ "
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
