Calculate Root Mean Square Error

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -136,6 +136,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ByRPa0y3kHuB"
+      },
+      "source": [
+        "np.sqrt ( sum( abs( actualValue**2 - predictedValue**2 ) ) ) / len( xtrain ) # RMSE"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
