Created Grap for Prediction

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -143,7 +143,25 @@
         "id": "ByRPa0y3kHuB"
       },
       "source": [
-        "np.sqrt ( sum( abs( actualValue**2 - predictedValue**2 ) ) ) / len( xtrain ) # RMSE"
+        "np.sqrt ( sum( abs( actualValue**2 - predictedValue**2 ) ) ) / len( xtrain ) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UljRk1xEkj6X"
+      },
+      "source": [
+        "plt.scatter(xtrain, ytrain, color='orange') \n",
+        "\n",
+        "prediction = regressor.predict(xtrain)\n",
+        "plt.plot(xtrain, prediction , color = 'black')\n",
+        "\n",
+        "plt.title (\"Jóslás a tanuló adatcsoportra\")\n",
+        "plt.xlabel(\"Hőmérséklet Celsiusban\"), plt.ylabel(\"Csapadék\")\n",
+        "plt.show()\n"
       ],
       "execution_count": null,
       "outputs": []
