Created graph for training dataset

--- a/code/LinearRegression.ipynb
+++ b/code/LinearRegression.ipynb
@@ -165,6 +165,23 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gHbV10KPlaey"
+      },
+      "source": [
+        "plt.scatter(xtest, ytest, color= 'orange')\n",
+        "\n",
+        "plt.plot(xtrain, regressor.predict(xtrain), color = 'black')\n",
+        "\n",
+        "plt.title (\"Tanuló adatcsoport\")\n",
+        "plt.xlabel(\"Hőmérséklet Celsiusban\"), plt.ylabel(\"Csapadék\")\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
